--- a/list.html
+++ b/list.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <h2>買い物リスト</h2>
 <u1>
   <li>ああ</li>
@@ -9,3 +10,9 @@
   <li>ああ</li>
   <li>ああ</li>
 </ol>
+  
+<h2>注意事項</h2>
+<dl>
+  <li>ああ</li>
+  <li>ああ</li>
+</dl>
