--- a/list.html
+++ b/list.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
+<body>
+  
 <h2>買い物リスト</h2>
 <u1>
   <li>ああ</li>
@@ -17,3 +19,6 @@
   <li>ああ</li>
   <li>ああ</li>
 </dl>
+
+</body>
+</html>
