--- a/list.html
+++ b/list.html
@@ -4,20 +4,20 @@
   
 <h2>買い物リスト</h2>
 <u1>
-  <li>ああ</li>
-  <li>ああ</li>
+  <li>寿司</li>
+  <li>トマト</li>
 <u1>
 
 <h2>順序</h2>
 <ol>
-  <li>ああ</li>
-  <li>ああ</li>
+  <li>スーパー</li>
+  <li>八百屋</li>
 </ol>
   
 <h2>注意事項</h2>
 <dl>
-  <li>ああ</li>
-  <li>ああ</li>
+  <li>醤油をもらい忘れない</li>
+  <li>いらないものを買わない</li>
 </dl>
 
 </body>
