--- a/list.html
+++ b/list.html
@@ -19,8 +19,10 @@
   
 <h2>注意事項</h2>
 <dl>
-  <li>醤油をもらい忘れない</li>
-  <li>いらないものを買わない</li>
+  <dt>スーパーにて</dt>
+  <dd>醤油をもらい忘れない</dd>
+  <dt>八百屋にて</dt>
+  <dd>いらないものを買わない</dd>
 </dl>
 
 </body>
