--- a/list.html
+++ b/list.html
@@ -6,10 +6,10 @@
 <body>
   
 <h2>買い物リスト</h2>
-<u1>
+<ul>
   <li>寿司</li>
   <li>トマト</li>
-</u1>
+</ul>
 
 <h2>周る順序</h2>
 <ol>
@@ -19,9 +19,9 @@
   
 <h2>注意事項</h2>
 <dl>
-  <dt>スーパーにて</dt>
+  <dt>at スーパー</dt>
   <dd>醤油をもらい忘れない</dd>
-  <dt>八百屋にて</dt>
+  <dt>at 八百屋</dt>
   <dd>いらないものを買わない</dd>
 </dl>
 
