--- a/table.html
+++ b/table.html
@@ -4,9 +4,31 @@
 <title>table</title>
   </head>
 <body>
-  
   <table>
-<tr><th>A</tr></th>
+  <thead>
+        <tr>
+            <th>番号</th>
+            <th>名前</th>
+            <th>テストの点数</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>田中太郎</td>
+            <td>30</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>山田花子</td>
+            <td>25</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>鈴木正人</td>
+            <td>28</td>
+        </tr>
+    </tbody>
   </table>
   
 </body>
