--- a/table.html
+++ b/table.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-<title>table</title>
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Table Example</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
+</head>
 <body>
   <table>
   <thead>
         <tr>
-            <th>番号</th>
+            <th>学生番号</th>
             <th>名前</th>
             <th>テストの点数</th>
         </tr>
@@ -15,17 +31,17 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>田中太郎</td>
+            <td>青木駿</td>
             <td>30</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>山田花子</td>
+            <td>熊谷優斗</td>
             <td>25</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>鈴木正人</td>
+            <td>岩崎正樹</td>
             <td>28</td>
         </tr>
     </tbody>
